# Robot_FR3_Gripper_ROS2

./: .gitignore
src/fr3_custom_gripper_description/: CMakeLists.txt  README.md  package.xml
src/fr3_custom_gripper_description/launch/: view_custom_gripper_mesh.launch.py
src/fr3_custom_gripper_description/meshes/: phalanx_1.stl  phalanx_2.stl
src/fr3_custom_gripper_description/urdf/: fr3_custom_3finger_gripper_mesh.urdf
src/fr3_with_custom_gripper_description/: CMakeLists.txt  README.md  package.xml
src/fr3_with_custom_gripper_description/launch/: view_fr3_gripper_preview.launch.py
src/fr3_with_custom_gripper_description/meshes/: gripper_body.stl
src/fr3_with_custom_gripper_description/rviz/: fr3_gripper_preview.rviz
src/fr3_with_custom_gripper_description/urdf/: fairino3_v6_with_custom_gripper.urdf
src/frcobot_ros2/fairino_hardware/libfairino/lib/: libfairino.so.2
