<?xml version="1.0"?>
<package format="3">
  <name>fr3_with_custom_gripper_description</name>
  <version>0.0.1</version>
  <description>Standalone preview package for Fairino FR3 with the custom three-finger gripper.</description>
  <maintainer email="hungnq676@gmail.com">Nguyen Quang Hung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>fairino_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
